# project7

./: .gitignore  README.md  project7.ipynb  pyproject.toml  requirements.txt  run.sh
.github/workflows/: main.yml
nn/: __init__.py  nn.py  preprocess.py
test/: test.py
