[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.9'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "nn"
authors = [{name = "Andrew Blair", email = "andrew.blair@ucsf.edu"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["matplotlib==3.3.2", "numpy>=1.19.2", "pandas==1.1.3", "scikit_learn==1.0.2", "pytest"]

[project.urls]
Home = "https://github.com/apblair/project7"
